--- a/fullstack/frontend/src/pages/home/home.html
+++ b/fullstack/frontend/src/pages/home/home.html
@@ -8,11 +8,7 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+  <h3 *ngIf="userModel">{{userModel.name}}</h3>
 
   <button ion-button secondary menuToggle>Toggle Menu</button>
 </ion-content>
