--- a/fullstack/frontend/src/pages/friend/find-friend/find-friend.html
+++ b/fullstack/frontend/src/pages/friend/find-friend/find-friend.html
@@ -9,7 +9,7 @@
 
 <ion-content padding>
 
-  <ng-template ngFor let-user [ngForOf]="users">
+  <ng-template ngFor let-user [ngForOf]="users" [ngForTrackBy]="usersTrackByFn">
     <ion-card>
       <ion-card-header>
         <ion-icon name="person"></ion-icon>
@@ -36,8 +36,8 @@
 
       <ion-row>
         <ion-col>
-          <button ion-button icon-left clear>
-            <ion-icon name="add-circle"></ion-icon>
+          <button ion-button icon-left clear (click)="addFriend(user)">
+            <ion-icon name="person-add"></ion-icon>
             <div>Send friend request</div>
           </button>
         </ion-col>
